--- a/homepage.html
+++ b/homepage.html
@@ -283,7 +283,9 @@
 
 
  <!-- Footer Design Code Start Here. -->
-
+<div class="top-bar">
+  <div class="c"><p><a href="#">Back to top</a></p></div>
+</div>
 <footer>
   <div class="fcontainer">
     <div class="footer-content">
