--- a/homepage.html
+++ b/homepage.html
@@ -303,10 +303,10 @@
     </div>
     <div class="footer-content">
       <h3>Follow Us</h3>
-      <li><a href="https://www.facebook.com/JohnDoe123"><i class="fab fa-facebook"></i></a></li>
-      <li><a href="https://twitter.com/TechieTom_2025"><i class="fab fa-twitter"></i></a></li>
-      <li><a href="https://www.instagram.com/creative_vibes_99"><i class="fab fa-instagram"></i></a></li>
-      <li><a href="https://www.linkedin.com/in/sarah-jones-professional"><i class="fab fa-linkedin"></i></a></li>
+      <li><a href="https://www.facebook.com/JohnDoe123">Facebook <i class="fab fa-facebook"></i></a></li>
+      <li><a href="https://twitter.com/TechieTom_2025">Twitter <i class="fab fa-twitter"></i></a></li>
+      <li><a href="https://www.instagram.com/creative_vibes_99">Instagram <i class="fab fa-instagram"></i></a></li>
+      <li><a href="https://www.linkedin.com/in/sarah-jones-professional">Linkedin <i class="fab fa-linkedin"></i></a></li>
     </div>
   </div>  
   
