--- a/My_Appointment.html
+++ b/My_Appointment.html
@@ -26,7 +26,7 @@
     </label>
     <label class="logo">R-Care</label>
     <ul>
-        <li><a class="active" href="#">Home</a></li>
+        <li><a class="active" href="homepage.html">Home</a></li>
         <li><a href="My_Appointment.html">My Appointments</a></li>
         <li><a href="Booking_form.html">Book Appointments</a></li>
         <li><a href="tel:+1234567890">Call Us</a></li>
