--- a/Booking_form.html
+++ b/Booking_form.html
@@ -6,8 +6,37 @@
     <meta http-equiv="X-UA_Compatible" content="ie=edge">
     <title>Appointment Form</title>
     <link rel="stylesheet" href="Booking_form.css">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,200,0,0" />
 </head>
 <body>
+
+
+<!-- Nav bar for Appointment page code start here-->
+ 
+<nav>
+  <input type="checkbox" id="check">
+  
+  <label for="check" class="checkbtn">
+    <i class="fas fa-bars"></i>
+  </label>
+  <label class="logo">R-Care</label>
+  <ul>
+      <li><a class="active" href="homepage.html">Home</a></li>
+      <li><a href="My_Appointment.html">My Appointments</a></li>
+      <li><a href="Booking_form.html">Book Appointments</a></li>
+      <li><a href="tel:+1234567890">Call Us</a></li>
+      <li><a href="https://wa.me/1234567890?text=Hello%20there!">Whatsapp Us</a></li>
+      <li><a href="index.html">Sign Out</a></li>
+  </ul>
+ </nav>
+
+<!-- Nav bar for Appointment page code end here -->
+
+    
+
+    
     <section class="container">
         <header>Appointment Form</header>
         <form  method="" action="Sumbit_screen.html" class="form">
