--- a/homepage.html
+++ b/homepage.html
@@ -290,7 +290,7 @@
   <div class="fcontainer">
     <div class="footer-content">
       <h3>Contact Us</h3>
-      <p>Email:Info@example>com</p>
+      <p>Email:Info@example.com</p>
       <p>Phone:+121 565565 565556</p>
       <p>Address:34 no. Street Guwahati </p>
     </div>
